--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MiraiConsultMVC.Models.QuestionModel>
 @{
     ViewBag.Title = "similarQuestions";
-    if (Session["UserId"] != null &&  Convert.ToInt32(Session["UserType"]) == Convert.ToInt32( UserType.Patient))
+    if (Session["UserId"] != null)
     {
         Layout = "~/Views/Shared/_PatientMasterLayout.cshtml";
     }
@@ -97,7 +97,7 @@
                                     }
 
                                     <div class='span11 middle-size-padding'>
-                                        @if (Model.ToList()[i].answers[0].AnswerImage != null)
+                                        @if (!string.IsNullOrEmpty( Model.ToList()[i].answers[0].AnswerImage))
                                         {
                                             <div class='span5 '>
                                                 <p class='ans_text'>@Model.ToList()[i].answers[0].AnswerText </p>
@@ -111,7 +111,7 @@
                                         else
                                         {
                                             <div class='span11'>
-                                                <p class='ans_text'>@Model.ToList()[i].answers[0].AnswerImage</p>
+                                                <p class='ans_text'>@Model.ToList()[i].answers[0].AnswerText</p>
                                             </div>
 
                                         }
