--- a/MiraiConsultMVC/Views/FindDoctor/FindDoctors.cshtml
+++ b/MiraiConsultMVC/Views/FindDoctor/FindDoctors.cshtml
@@ -67,8 +67,8 @@
             </div>
             <input type="hidden" id="HiddenUserType" name="HiddenUserType" value="@Model.HiddenUserType" />
             <input type="hidden" id="hdnDocconnecturl" name="hdnDocconnecturl" value="@Model.hdnDocconnecturl" />
-            <input type="hidden" id="hdnLoactionId" name="hdnDocconnecturl" value="@Model.hdnLoactionId" />
-            <input type="hidden" id="hdnCityId" name="hdnDocconnecturl" value="@Model.hdnCityId" />
+            <input type="hidden" id="hdnLoactionId" name="hdnLoactionId" value="@Model.hdnLoactionId" />
+            <input type="hidden" id="hdnCityId" name="hdnCityId" value="@Model.hdnCityId" />
 
         </div>
         <script src="~/Content/chosen/chosen.jquery.js"></script>
