cancel button is working for tags

--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -192,7 +192,7 @@
                                     <label class="control-label"></label>
                                     <div class="controls">
                                         <input type="button" class="btn thanx" onclick="return validatedata();" value="Assign" />
-                                        <input type="reset" value="Cancel" class="btn" />
+                                        <input type="reset" value="Cancel" onclick="window.location.href = window.location.href" class="btn" />
                                     </div>
                                 </div>
                             </div>
