--- a/MiraiConsultMVC/Views/Home/Contact.cshtml
+++ b/MiraiConsultMVC/Views/Home/Contact.cshtml
@@ -1,5 +1,8 @@
 ﻿@model MiraiConsultMVC.Models.Home.Contact
 <script type="text/javascript" src="../Scripts/bootstrap-dropdown.js"></script>
+@{
+    Layout = "~/Views/Shared/_AskmiraiMasterLayout.cshtml";
+}
 @Scripts.Render("~/bundles/jqueryval")
 @using (Html.BeginForm(new { autocomplete = "off" }))
 {
@@ -88,7 +91,7 @@
                         <div class="span12">
                             <div class="span8 pull-right btn-padding-left">
                                 <input type="submit" id="btnSend" class="btn thanx gray-border" value="Send" />
-                                <input type="reset" id="btnClear" class="btn cancel gray-border" value="Reset" onclick="ClearMessage()" />
+                                <input type="reset" id="btnClear" class="btn cancel gray-border" value="Reset" onclick="window.location.href = '/Home/Contact'" />
                             </div>
                         </div>
                     </div>
@@ -100,9 +103,6 @@
 }
 <script src="../Scripts/jquery-1.9.1.min.js"></script>
 <script>
-    function ClearMessage() {
-        document.getElementById('Messagediv').style.display = 'none';
-    }
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
             (i[r].q = i[r].q || []).push(arguments)
