--- a/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_PatientMasterLayout.cshtml";
 }
 <script type="text/javascript" src="../Scripts/utility.js"></script>
-@Scripts.Render("~/bundles/validation")
+@Scripts.Render("~/bundles/jqueryval")
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -73,7 +73,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Mobile No:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.MobileNo, new { @class = "input-block-level cust-lightgreen max-width min-width", placeholder = "Mobile No", maxlength = "15" })<br/>
+                                            @Html.TextBoxFor(m => m.MobileNo, new { @class = "input-block-level cust-lightgreen max-width min-width", placeholder = "Mobile No", @onkeypress = "return isNumber(event,10,this);" })<br/>
                                             @Html.ValidationMessageFor(m => m.MobileNo, string.Empty, new { @class = "validation-summary-errors" })
                                         </div>
                                     </div>
@@ -86,7 +86,7 @@
                                         <div class="controls">
                                             <div class="input-append date" id="dob" data-date-format="dd/mm/yyyy" data-date-start-view="decade"
                                                  data-date-enddate="new Date()">
-                                                @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "cust-lightgreen input-without-right-curve  date_box_width txtdateOfBirth", @style = "margin-top:0px;", placeholder = "Date Of Birth" })
+                                                @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "cust-lightgreen input-without-right-curve  date_box_width txtdateOfBirth", @style = "margin-top:0px;", placeholder = "Date Of Birth", @Value = Model.DateOfBirth==null?"":Convert.ToDateTime(Model.DateOfBirth).ToString("dd/MM/yyyy"), @id = "txtDob" })
                                                 <span class="add-on add-on-green  icon-with-right-curve"></span><br/>
                                                 @Html.ValidationMessageFor(m => m.DateOfBirth, string.Empty, new { @class = "validation-summary-errors" })                                                
                                             </div>
@@ -200,7 +200,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Pin Code:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.Pincode, new { @class = "input-block-level cust-lightgreen cust-lightgreen max-width min-width", placeholder = "Pin Code", @Value = (Model.Pincode == 0) ? "" : Model.Pincode.ToString(), maxlength = "6", id = "txtPinCode" })<br/>
+                                            @Html.TextBoxFor(m => m.Pincode, new { @class = "input-block-level cust-lightgreen cust-lightgreen max-width min-width", placeholder = "Pin Code", @Value = (Model.Pincode == 0) ? "" : Model.Pincode.ToString(), @onkeypress = "return isNumber(event,6,this);", id = "txtPinCode" })<br/>
                                             @Html.ValidationMessageFor(m => m.Pincode, string.Empty, new { @class = "validation-summary-errors" })                                            
                                         </div>
                                     </div>
@@ -211,7 +211,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Height (in cm):</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.Height, new { @class = "input-block-level cust-lightgreen cust-lightgreen max-width min-width", placeholder = "Height in cm", maxlength = "5", id = "txtHeight" })<br/>
+                                            @Html.TextBoxFor(m => m.Height, new { @class = "input-block-level cust-lightgreen cust-lightgreen max-width min-width", placeholder = "Height in cm", @onkeypress = "return isNumber(event,5,this);", id = "txtHeight" })<br/>
                                             @Html.ValidationMessageFor(m => m.Height, string.Empty, new { @class = "validation-summary-errors" })                                            
                                         </div>
                                     </div>
@@ -220,7 +220,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Weight (in kg):</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.Weight, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width", placeholder = "Weight in kg", maxlength = "5", id = "txtWeight" })<br/>
+                                            @Html.TextBoxFor(m => m.Weight, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width", placeholder = "Weight in kg", @onkeypress = "return isDecimalNumber(event,3,this);", id = "txtWeight" })<br/>
                                             @Html.ValidationMessageFor(m => m.Weight, string.Empty, new { @class = "validation-summary-errors" })                                            
                                         </div>
                                     </div>
@@ -250,7 +250,11 @@
         document.getElementById('SuccessMessagediv').style.display = 'none';
         document.getElementById('errorMessagediv').style.display = 'none';
     }
-
+    $("#txtDob").focusout(function () {
+        var cntrl = $(this);
+        if (cntrl.val().length > 0)
+            isValidDateofBirth(cntrl);
+    })
     function getStatebyCountry(countryId) {
         $.ajax({
             type: "GET",
@@ -311,7 +315,25 @@
             return true;
         }
     }
+    function isDecimalNumber(evt, num, txt) {
+        evt = (evt) ? evt : window.event;
+        var charCode = (evt.which) ? evt.which : evt.keyCode;
+        var len = $(txt).val().length;
+        if ((charCode > 31 && (charCode < 48 || charCode > 57) && charCode != 46) || len >= num) {
+            return false;
+        }
+        return true;
+    }
 
+    function isNumber(evt, num, txt) {
+        evt = (evt) ? evt : window.event;
+        var len = $(txt).val().length;
+        var charCode = (evt.which) ? evt.which : evt.keyCode;
+        if ((charCode > 31 && (charCode < 48 || charCode > 57)) || len >= num) {
+            return false;
+        }
+        return true;
+    }
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
             (i[r].q = i[r].q || []).push(arguments)
