--- a/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
@@ -13,7 +13,7 @@
 <script src="../Scripts/bootstrap-datepicker.js"></script>
 <script src="../Scripts/dateofbirthvalidation.js"></script>
 <script src="../Content/chosen/chosen.jquery.js"></script>
-
+@Scripts.Render("~/bundles/jqueryval")
 @*<a href="~/Content/less/datepicker.less"></a>*@
 @using (Html.BeginForm(Html.BeginForm("DoctorSignUp", "User", FormMethod.Post, new { @encType = "multipart/form-data", autocomplete = "off" })))
 {
@@ -60,7 +60,7 @@
                                                 <label class="required cust-font-style">First Name:</label>
                                             </div>
                                             <div class="span8  ">
-                                                @Html.TextBoxFor(m => m.FirstName, new { @class = "cust-no-border cust-lightgreen input-block-level max-width min-width", maxlength = "50", placeholder = "First Name" })<br />
+                                                @Html.TextBoxFor(m => m.FirstName, new { @class = "cust-no-border cust-lightgreen input-block-level", maxlength = "50", placeholder = "First Name" })<br />
                                                 @Html.ValidationMessageFor(m => m.FirstName, string.Empty, new { @class = "validation-summary-errors" })
                                             </div>
                                         </div>
@@ -69,7 +69,7 @@
                                                 <label class="required cust-font-style">Last Name:</label>
                                             </div>
                                             <div class="span8">
-                                                @Html.TextBoxFor(m => m.LastName, new { @class = "cust-no-border cust-gray input-block-level max-width min-width", maxlength = "50", placeholder = "Last Name" })<br />
+                                                @Html.TextBoxFor(m => m.LastName, new { @class = "cust-no-border cust-gray input-block-level", maxlength = "50", placeholder = "Last Name" })<br />
                                                 @Html.ValidationMessageFor(m => m.LastName, string.Empty, new { @class = "validation-summary-errors" })
                                             </div>
                                         </div>
@@ -83,8 +83,8 @@
                                             </div>
                                             <div class="span8">
                                                 <div class="input-append date" id="dob" data-date-format="dd/mm/yyyy" data-date-start-view="decade"
-                                                     data-date-enddate="new Date()" style="width: 65%;">
-                                                    @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "cust-lightgreen input-without-right-curve  date_box_width txtdateOfBirth", placeholder = "Date Of Birth" })
+                                                     data-date-enddate="new Date()" style="width: 100%;">
+                                                    @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "input-without-right-curve cust-lightgreen cust-gray", placeholder = "Date Of Birth",@style = " width:85%",@id = "txtDob" })
                                                     <span class="add-on add-on-green  icon-with-right-curve"></span>
                                                 </div>
                                             </div>
@@ -111,7 +111,7 @@
                                                 <label class="cust-font-style">Mobile No:</label>
                                             </div>
                                             <div class="span8">
-                                                @Html.TextBoxFor(m => m.MobileNo, new { @class = "cust-no-border cust-gray input-block-level max-width min-width", maxlength = "10", placeholder = "Mobile No" })<br />
+                                                @Html.TextBoxFor(m => m.MobileNo, new { @class = "cust-no-border cust-gray input-block-level", @maxlength = "10", @placeholder = "Mobile No", @onkeypress = "return isNumber(event,10,this);" })<br />
                                                 @Html.ValidationMessageFor(m => m.MobileNo, string.Empty, new { @class = "validation-summary-errors" })
                                             </div>
                                         </div>
@@ -121,6 +121,7 @@
                                             </div>
                                             <div class="span8">
                                                 <input type="file" name="file" id="Image" value="@Model.Image" maxlength="256" style="width: 100%;">
+                                                <span id="ImageValidation" class="field-validation-error validation-summary-errors" data-valmsg-for="Image" data-valmsg-replace="true"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -130,8 +131,8 @@
                                         <div class="span2">
                                             <label class="cust-font-style">About Me:</label>
                                         </div>
-                                        <div class="span9 cust-margin-span10">
-                                            @Html.TextBoxFor(m => m.AboutMe, new { @class = "cust-lightgreen input-block-level ", maxlength = "200", placeholder = "About Me" })
+                                        <div class="span10 cust-margin-span10">
+                                            @Html.TextAreaFor(m => m.AboutMe, new { @class = " cust-lightgreen input-block-level", maxlength = "200",@placeholder = "About Me",@rows="1",@cols="5"})
                                         </div>
                                     </div>
                                 </div>
@@ -147,7 +148,11 @@
                                                 <label class="cust-font-style">Specialities:</label>
                                             </div>
                                             <div class="span8">
-                                                @Html.ListBox("specialities",ViewBag.specialities as MultiSelectList,new { @class = "chzn-select max-width" })
+                                                @Html.ListBox(
+                                                "lstSpecialities",
+                                                ViewBag.specialities as MultiSelectList,
+                                                new { @class = "chzn-select regspeciality_width" }
+                                                )
                                             </div>
                                         </div>
                                         <div class="span6">
@@ -155,7 +160,7 @@
                                                 <label class="cust-font-style">Registration No:</label>
                                             </div>
                                             <div class="span8">
-                                                @Html.TextBoxFor(m => m.RegistrationNumber, new { @class = "cust-no-border cust-lightgreen input-block-level max-width min-width", maxlength = "15", placeholder = "Registration Number" })
+                                                @Html.TextBoxFor(m => m.RegistrationNumber, new { @class = "cust-no-border cust-lightgreen input-block-level", maxlength = "15", placeholder = "Registration Number" })
                                             </div>
                                         </div>
                                     </div>
@@ -170,11 +175,11 @@
                                                 @if (Model.Countries != null)
                                                 {
                                                     ViewBag.countries = Model.Countries;
-                                                    @Html.DropDownListFor(m => Model.CountryId, new SelectList(ViewBag.countries, "Value", "Text", Model.CountryId), "--Select Country--", new { @class = "input-block-level cust-lightgreen cust-gray drop-arrows max-width min-width", id = "ddlCountry", onchange = "getRegistrationCouncilbyCountry(this.value)" })
+                                                    @Html.DropDownListFor(m => Model.CountryId, new SelectList(ViewBag.countries, "Value", "Text", Model.CountryId), "--Select Country--", new { @class = "cust-no-border cust-lightgreen input-block-level drop-arrows", id = "ddlCountry", onchange = "getRegistrationCouncilbyCountry(this.value)" })
                                                 }
                                                 else
                                                 {
-                                                    @Html.DropDownListFor(m => Model.CountryId, new SelectList(string.Empty), "--Select Country--", new { @class = "input-block-level cust-lightgreen cust-gray drop-arrows max-width min-width" })
+                                                    @Html.DropDownListFor(m => Model.CountryId, new SelectList(string.Empty), "--Select Country--", new { @class = "cust-no-border cust-lightgreen input-block-level drop-arrows" })
                                                 }
                                             </div>
                                         </div>
@@ -183,7 +188,15 @@
                                                 <label class="cust-font-style">Registration Council:</label>
                                             </div>
                                             <div class="span8">
-                                                @Html.DropDownListFor(m => m.Regcouncilid, new SelectList(string.Empty), "--- Registration Council ---", new { @class = "input-block-level cust-gray drop-arrows cust-lightgreen max-width min-width", id = "ddlRegistrationCouncil" })
+                                                @if (Model.Councils != null)
+                                                {
+                                                    ViewBag.councils = Model.Councils;
+                                                    @Html.DropDownListFor(m => Model.Regcouncilid, new SelectList(ViewBag.councils, "Value", "Text", Model.Regcouncilid), "--Registration Council--", new { @class = "cust-no-border cust-gray input-block-level drop-arrows", id = "ddlRegistrationCouncil"})
+                                                }
+                                                else
+                                                { 
+                                                    @Html.DropDownListFor(m => m.Regcouncilid, new SelectList(string.Empty), "--- Registration Council ---", new { @class = "cust-no-border cust-gray input-block-level drop-arrows", id = "ddlRegistrationCouncil" })
+                                                }
                                             </div>
                                         </div>
                                     </div>
@@ -200,7 +213,7 @@
                                                 <label class="cust-font-style required ">Email:</label>
                                             </div>
                                             <div class="span8">
-                                                @Html.TextBoxFor(m => m.Email, new { @class = "cust-no-border cust-lightgreen input-block-level max-width min-width", maxlength = "50", placeholder = "Email" })<br />
+                                                @Html.TextBoxFor(m => m.Email, new { @class = "cust-no-border cust-lightgreen input-block-level", maxlength = "50", placeholder = "Email" })<br />
                                                 @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "validation-summary-errors" })
                                             </div>
                                         </div>
@@ -214,7 +227,7 @@
                                                 <label class="cust-font-style required ">Password:</label>
                                             </div>
                                             <div class="span8">
-                                                @Html.PasswordFor(m => m.Password, new { @Class = "cust-no-border cust-gray input-block-level max-width min-width", maxlength = "30", placeholder = "Password" })<br />
+                                                @Html.PasswordFor(m => m.Password, new { @Class = "cust-no-border cust-gray input-block-level", maxlength = "30", placeholder = "Password" })<br />
                                                 @Html.ValidationMessageFor(m => m.Password, string.Empty, new { @class = "validation-summary-errors" })
                                             </div>
                                         </div>
@@ -223,7 +236,8 @@
                                                 <label class="cust-font-style required ">Confirm Password:</label>
                                             </div>
                                             <div class="span8">
-                                                <input name="ConfirmPassword" maxlength="30" id="ConfirmPassword" type="password" class="icust-no-border cust-lightgreen input-block-level max-width min-width" placeholder="Confirm Password" /><br />
+                                                @*<input name="ConfirmPassword" maxlength="30" id="ConfirmPassword" type="password" class="cust-no-border cust-lightgreen input-block-level" placeholder="Confirm Password" /><br />*@
+                                                @Html.PasswordFor(m=>m.ConfirmPassword,new{@maxlength="30", @id="ConfirmPassword", @type="password", @class="cust-no-border cust-lightgreen input-block-level", @placeholder="Confirm Password"})
                                                 @Html.ValidationMessageFor(m => m.ConfirmPassword, string.Empty, new { @class = "validation-summary-errors" })
 
                                             </div>
@@ -232,7 +246,8 @@
                                 </div>
                                 <div class="row-fluid cust-padding-bw-row text-center">
                                     <div class="span12">
-                                        <input type="submit" name="btnCreateDoctorAccount" value="Create Account" id="btnCreateDoctorAccount" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style">
+                                        @*<input type="submit" name="btnCreatePatientAccount" value="Create Account" onclick="" id="btnCreatePatientAccount" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style" />*@
+                                        <input type="submit" name="btnCreateDoctorAccount" value="Create Account" id="btnCreateDoctorAccount" onclick="" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style">
                                         <input type="reset" name="btnClear" value="Clear" id="btnClear" onclick="window.location.href = '/User/DoctorSignUp'" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style">
                                     </div>
                                 </div>
@@ -248,14 +263,39 @@
 }
 
 <script type="text/javascript">
-    function isNumber(evt) {
+    function isNumber(evt, num, txt) {
         evt = (evt) ? evt : window.event;
+        var len = $(txt).val().length;
         var charCode = (evt.which) ? evt.which : evt.keyCode;
-        if (charCode > 31 && (charCode < 48 || charCode > 57)) {
+        if ((charCode > 31 && (charCode < 48 || charCode > 57)) || len >= num) {
             return false;
         }
         return true;
     }
+
+    $("#btnCreateDoctorAccount").click(function () {
+        $("#ImageValidation").html("");
+    });
+    $("#Image").change(function () {
+
+        var val = $(this).val();
+        switch (val.substring(val.lastIndexOf('.') + 1).toLowerCase()) {
+            case 'gif': case 'jpg': case 'png': case 'jpeg':
+                $("#ImageValidation").html("");
+                break;
+            default:
+                $(this).val('');
+                $("#ImageValidation").html("Supports only .jpg,.png,.gif,.jpeg formats. Please upload a file with either of these extensions.");
+                break;
+        }
+    });
+
+
+    $("#txtDob").focusout(function () {
+        var cntrl = $(this);
+        if (cntrl.val().length > 0)
+            isValidDateofBirth(cntrl);
+    })
     $("select").addClass("form-control")
     $(".input-block-level").keyup(function () {
         //Page_ClientValidate();
