--- a/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
@@ -43,9 +43,15 @@
 
                             @if (ViewBag.message != null && ViewBag.message == "This email is not available. Please select a different email.")
                             {
-                                <div class="span12 alert alert-error" id="errorMessageDiv">
-                                    <label id="lblErrorMessage">@ViewBag.message</label>
+                                <div class="wrapper-bordered alert alert-error" id="SuccessMessagediv">
+                                    <div class="row-fluid">
+                                        <div class="span12 " id="errorMessageDiv">
+                                            <label id="lblErrorMessage">@ViewBag.message</label>
+                                        </div>
+                                    </div>
                                 </div>
+
+
                             }
                             <div class="row-fluid cust-padding-bw-row">
                                 <div class="span12">
@@ -78,7 +84,7 @@
                                         <div class="span8">
                                             <div class="input-append date" id="dob" data-date-format="dd/mm/yyyy" data-date-start-view="decade"
                                                  data-date-enddate="new Date()" style="width: 100%">
-                                                @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "input-without-right-curve cust-lightgreen cust-gray", @style = "margin-top:0px;width: 85%;", placeholder = "Date Of Birth" })
+                                                @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "input-without-right-curve cust-lightgreen cust-gray", @style = "margin-top:0px;width: 85%;", @placeholder = "Date Of Birth", @id = "txtDob" })
                                                 <span class="add-on add-on-green  icon-with-right-curve"></span>
                                             </div>
                                         </div>
@@ -105,8 +111,8 @@
                                             <label class="cust-font-style">Height (in cm):</label>
                                         </div>
                                         <div class="span8">
-                                            @Html.TextBoxFor(m => m.Height, new { @Class = "input-block-level cust-lightgreen cust-lightgreen", placeholder = "Height in cm", @Value = (Model.Height == 0) ? "" : Model.Height.ToString(), @onkeypress = "return isDecimalNumber(event,5,this);" })<br />
-                                            @Html.ValidationMessageFor(m => m.Height, string.Empty, new { @class = "validation-summary-errors" })
+                                            @Html.TextBoxFor(m => m.Height, new { @Class = "input-block-level cust-lightgreen cust-lightgreen", placeholder = "Height in cm", @Value = (Model.Height == 0) ? "" : Model.Height.ToString(), @onkeypress = "return isNumber(event,5,this);" })<br />
+                                            @*@Html.ValidationMessageFor(m => m.Height, string.Empty, new { @class = "validation-summary-errors" })*@
                                         </div>
                                     </div>
                                     <div class="span6">
@@ -115,7 +121,7 @@
                                         </div>
                                         <div class="span8">
                                             @Html.TextBoxFor(m => m.Weight, new { @Class = "input-block-level cust-lightgreen cust-gray", placeholder = "Weight in kg", @Value = (Model.Weight == 0) ? "" : Model.Weight.ToString(), @onkeypress = "return isDecimalNumber(event,3,this);" })<br />
-                                            @Html.ValidationMessageFor(m => m.Weight, string.Empty, new { @class = "validation-summary-errors" })
+                                            @*// @Html.ValidationMessageFor(m => m.Weight, string.Empty, new { @class = "validation-summary-errors" })*@
                                         </div>
                                     </div>
                                 </div>
@@ -211,8 +217,8 @@
                                         <label class="cust-font-style">Pin Code:</label>
                                     </div>
                                     <div class="span8">
-                                        @Html.TextBoxFor(m => m.Pincode, new { @Class = "input-block-level cust-lightgreen cust-lightgreen", placeholder = "Pin Code", @Value = (Model.Pincode == 0) ? "" : Model.Pincode.ToString(), @onkeypress = "return isNumber(event,6,this);"})<br />
-                                        @*@Html.ValidationMessageFor(m => m.Pincode, string.Empty, new { @class = "validation-summary-errors" })*@
+                                        @Html.TextBoxFor(m => m.Pincode, new { @Class = "input-block-level cust-lightgreen cust-lightgreen", placeholder = "Pin Code", @Value = (Model.Pincode == 0) ? "" : Model.Pincode.ToString(), @onkeypress = "return isNumber(event,6,this);" })<br />
+                                        @Html.ValidationMessageFor(m => m.Pincode, string.Empty, new { @class = "validation-summary-errors" })
                                     </div>
                                 </div>
                                 <div class="span6">
@@ -221,7 +227,7 @@
                                     </div>
                                     <div class="span8">
                                         @Html.TextBoxFor(m => m.MobileNo, new { @Class = "input-block-level cust-lightgreen cust-gray", placeholder = "Mobile No", @onkeypress = "return isNumber(event,10,this);" })<br />
-                                        @*@Html.ValidationMessageFor(m => m.MobileNo, string.Empty, new { @class = "validation-summary-errors" })*@
+                                        @Html.ValidationMessageFor(m => m.MobileNo, string.Empty, new { @class = "validation-summary-errors" })
                                     </div>
                                 </div>
                                 <div class="row-fluid">
@@ -246,7 +252,7 @@
                                             <label class="required cust-font-style">Password:</label>
                                         </div>
                                         <div class="span8">
-                                            @Html.PasswordFor(m => m.Password, new { @Class = "input-block-level cust-lightgreen cust-gray", placeholder = "Password" })<br />
+                                            @Html.PasswordFor(m => m.Password, new {@maxlength = "30",@Class = "input-block-level cust-lightgreen cust-gray", placeholder = "Password" })<br />
                                             @Html.ValidationMessageFor(m => m.Password, string.Empty, new { @class = "validation-summary-errors" })
                                         </div>
                                     </div>
@@ -255,7 +261,7 @@
                                             <label class="required cust-font-style">Confirm Password:</label>
                                         </div>
                                         <div class="span8">
-                                            @Html.PasswordFor(x => x.ConfirmPassword, new {@maxlength="30",@id="ConfirmPassword",@type="password",@class="input-block-level cust-lightgreen input-block-level",@placeholder="Confirm Password"})<br />
+                                            @Html.PasswordFor(x => x.ConfirmPassword, new { @maxlength = "30", @id = "ConfirmPassword", @type = "password", @class = "input-block-level cust-lightgreen input-block-level", @placeholder = "Confirm Password" })<br />
                                             @Html.ValidationMessageFor(m => m.ConfirmPassword, string.Empty, new { @class = "validation-summary-errors" })
                                         </div>
                                     </div>
@@ -275,7 +281,7 @@
     }
 }
 <script type="text/javascript">
-    function isNumber(evt, num,txt) {
+    function isNumber(evt, num, txt) {
         evt = (evt) ? evt : window.event;
         var len = $(txt).val().length;
         var charCode = (evt.which) ? evt.which : evt.keyCode;
@@ -285,7 +291,7 @@
         return true;
     }
 
-    function isDecimalNumber(evt, num,txt) {
+    function isDecimalNumber(evt, num, txt) {
         evt = (evt) ? evt : window.event;
         var charCode = (evt.which) ? evt.which : evt.keyCode;
         var len = $(txt).val().length;
@@ -294,64 +300,69 @@
         }
         return true;
     }
+    $("#txtDob").focusout(function () {
+        var cntrl = $(this);
+        if (cntrl.val().length > 0)
+            isValidDateofBirth(cntrl);
+    })
     $(".input-block-level").keyup(function () {
         $("form").valid();
     });
-        $(function () {
-            $('#dob').datepicker();
+    $(function () {
+        $('#dob').datepicker();
+    });
+    function getStatebyCountry(countryId) {
+        $.ajax({
+            type: "GET",
+            url: 'poupulateStateByCountry' + '?countryId=' + countryId,
+            datatype: "JSON",
+            contentType: "application/json; charset=utf-8",
+            success: function (returndata) {
+                $("#ddlState").empty();
+                $("#ddlCity").empty();
+                $("#ddlLocation").empty();
+                for (var i = 0; i < returndata.length; i++) {
+                    $("#ddlState").append($('<option>').text(returndata[i].name).attr('value', returndata[i].stateid));
+                };
+            }
         });
-        function getStatebyCountry(countryId) {
-            $.ajax({
-                type: "GET",
-                url: 'poupulateStateByCountry' + '?countryId=' + countryId,
-                datatype: "JSON",
-                contentType: "application/json; charset=utf-8",
-                success: function (returndata) {
-                    $("#ddlState").empty();
-                    $("#ddlCity").empty();
-                    $("#ddlLocation").empty();
-                    for (var i = 0; i < returndata.length; i++) {
-                        $("#ddlState").append($('<option>').text(returndata[i].name).attr('value', returndata[i].stateid));
-                    };
-                }
-            });
-        }
-        function getCitybyState(stateId) {
-            $.ajax({
-                type: "GET",
-                url: 'poupulateCityByState' + '?stateId=' + stateId,
-                datatype: "JSON",
-                contentType: "application/json; charset=utf-8",
-                success: function (returndata) {
-                    $("#ddlCity").empty();
-                    $("#ddlLocation").empty();
-                    for (var i = 0; i < returndata.length; i++) {
-                        $("#ddlCity").append($('<option>').text(returndata[i].name).attr('value', returndata[i].cityid));
-                    };
-                }
-            });
-        }
-        function getLocationbyCity(cityId) {
-            $.ajax({
-                type: "GET",
-                url: 'poupulateLocationByCity' + '?cityId=' + cityId,
-                datatype: "JSON",
-                contentType: "application/json; charset=utf-8",
-                success: function (returndata) {
-                    $("#ddlLocation").empty();
-                    for (var i = 0; i < returndata.length; i++) {
-                        $("#ddlLocation").append($('<option>').text(returndata[i].name).attr('value', returndata[i].locationid));
-                    };
-                }
-            });
-        }
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    }
+    function getCitybyState(stateId) {
+        $.ajax({
+            type: "GET",
+            url: 'poupulateCityByState' + '?stateId=' + stateId,
+            datatype: "JSON",
+            contentType: "application/json; charset=utf-8",
+            success: function (returndata) {
+                $("#ddlCity").empty();
+                $("#ddlLocation").empty();
+                for (var i = 0; i < returndata.length; i++) {
+                    $("#ddlCity").append($('<option>').text(returndata[i].name).attr('value', returndata[i].cityid));
+                };
+            }
+        });
+    }
+    function getLocationbyCity(cityId) {
+        $.ajax({
+            type: "GET",
+            url: 'poupulateLocationByCity' + '?cityId=' + cityId,
+            datatype: "JSON",
+            contentType: "application/json; charset=utf-8",
+            success: function (returndata) {
+                $("#ddlLocation").empty();
+                for (var i = 0; i < returndata.length; i++) {
+                    $("#ddlLocation").append($('<option>').text(returndata[i].name).attr('value', returndata[i].locationid));
+                };
+            }
+        });
+    }
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-48132984-2', 'askmirai.com');
-        ga('send', 'pageview');
+    ga('create', 'UA-48132984-2', 'askmirai.com');
+    ga('send', 'pageview');
 </script>
