"Already have an account" is shown for forgot message ,if invalid email error comes.

--- a/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
@@ -1,4 +1,7 @@
 ﻿@model MiraiConsultMVC.Models.User.Login
+@{
+    Layout = "~/Views/Shared/_AskmiraiMasterLayout.cshtml";
+}
 @Scripts.Render("~/bundles/jqueryval")
 <div class="row-fluid ">
     <div class="span6 custom-center-small-div">
